--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -20,7 +20,7 @@
           <input type="text" class="form-control" id="stripeKey" name="stripeKey" placeholder="sk_"/>
           <label for="taxamoKey">Taxamo Secret Key</label>
           <input type="text" class="form-control" id="taxamoKey" name="taxamoKey" placeholder="priv_"/>
-          <label for="sessionUri">Session API URI</label>
+          <label for="sessionUri">Session API URI (optionnal)</label>
           <input type="text" class="form-control" id="sessionUri" name="sessionUri" placeholder="https://backend.com/_api/_session"/>
           <label for="stripeDebug">Enable remote debugging</label>
           <div class="form-control" style="margin: 1.25em 0px 1.25em 30%; background: none; border: none;">
