add coupon support

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -13,12 +13,12 @@
     <!-- This index will be loaded in an iframe in you admin panel, where you can config your plugin -->
     <div class="container">
       <h1>Stripe Settings</h1>
-      <h2 class="description">Configure Strip key and Taxamo key</h2>
+      <h2 class="description">Configure Strip key and Taxamo</h2>
       <form role="form" id="stripeConfig">
         <fieldset>
           <label for="stripeKey">Stripe Secret Key</label>
           <input type="text" class="form-control" id="stripeKey" name="stripeKey" placeholder="sk_"/>
-          <label for="taxamoKey">Taxamo Secret Key</label>
+          <label for="taxamoKey">Taxamo Secret Key (optionnal)</label>
           <input type="text" class="form-control" id="taxamoKey" name="taxamoKey" placeholder="priv_"/>
           <label for="euroInEU">Accept only euro in EU</label>
           <div class="form-control" style="margin: 1.25em 0px 1.25em 30%; background: none; border: none;">
