handle customer without subscriptions

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -40,7 +40,7 @@
         </fieldset>
       </form>
 
-      <h2 class="description">Configure Taxamo, currencies and taxes (optionnal)</h2>
+      <h2 class="description">Other options</h2>
       <form role="form" id="miscConfig">
         <fieldset>
           <label for="sessionUri">Session API URI (optionnal)</label>
