All tests pass again

--- a/test/index.html
+++ b/test/index.html
@@ -45,8 +45,7 @@
 
 		window._fetch = window.fetch;
 	</script>
-	<script src="pingRequest.js"></script>
-	<script src="customerRequest.js"></script>
+	<script src="main.js"></script>
 	<script>mocha.run();</script>
 </body>
 </html>
