--- a/test/index.html
+++ b/test/index.html
@@ -35,7 +35,7 @@
 			c( error );
 		};
 		var hoodie = new Hoodie(HOODIE_URL);
-		Stripe.setPublishableKey('pk_test_PkwKlOWOqSoimNJo2vsT21sE');
+		Stripe.setPublishableKey(STRIPE_KEY);
 
 		var stripeTokensCreate = function( card, callback ) {
 				Stripe.card.createToken( card, function(status, response) {
